FE_Challenge_Final_Changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Dukaan FE Challenge Demonstration | React Web Development" />
   <meta property="og:description" content="Join us in a walkthrough of the Dukaan FE Challenge, demonstrating advanced React development skills and conversion of Figma designs into responsive web applications." />
-  <meta property="og:url" content="URL_of_the_demonstration_page" />
+  <meta property="og:url" content="https://dukaan-fe-challenge-sivasai.netlify.app/" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
 <body>
